--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "jsdom": "^24.1.1",
     "msw": "^2.3.5",
+    "prettier": "3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "vitest": "^2.0.5"
