--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
+    "react-intersection-observer": "^9.13.1",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
